--- a/RAJAS.csproj
+++ b/RAJAS.csproj
@@ -115,6 +115,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="support_file\ReportViewer.msi" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
